package com.mygdx.tanks.entities;

public class Bullet {
    
}
